| Summary: | ASTERISK-25250: chan_sip - Despite the channel being answered, caller on a call established via Local channel continues to hear ringback | ||
| Reporter: | Etienne Lessard (hexanol) | Labels: | |
| Date Opened: | 2015-07-14 11:00:04 | Date Closed: | 2015-07-22 13:20:38 |
| Priority: | Blocker | Regression? | Yes |
| Status: | Closed/Complete | Components: | Channels/chan_local Channels/chan_sip/General Core/Bridging |
| Versions: | 13.4.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) full.log ( 1) sip.conf | |
| Description: | Given I have the following extensions.conf:
{noformat} exten = 102,1,NoOp() same = n,Answer() same = n,Dial(SIP/bob) same = n,Hangup() exten = 112,1,NoOp() same = n,Dial(Local/102@internal) same = n,Hangup() {noformat} And I have two users, SIP/alice and SIP/bob When Alice dials 112, then Bob rings and Alice hears a ringback tone When Bob answers Then Alice and Bob are talking to each other, but Alice continue to hear the ringback tone (expected: the ringback tone stops) If Alice dials 102 directly, then the ringback tone is not heard after Bob answers. I've attached a full.log with SIP debug enabled. Both scenarios works fine in asterisk 11. [Edit by Rusty below:] I was able to reproduce on GIT-13-1aafadf(pulled on 2015-7-15) and here is what I found: * Able to reproduce when using chan_sip * Not able to reproduce when using chan_pjsip * Symptoms include not only hearing ringback on the calling channel but also hearing "robotic" sounding receive audio from the called channel at the same time (on top of the ringback). * On some calls it seems there is no audio except the ringback. * Tested with both ulaw and g722, symptoms remained the same despite codec change. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2015-07-14 11:00:05.867-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Rusty Newton (rnewton) 2015-07-15 16:40:03.370-0500 I'm finding some strange behavior beyond what you reported here. I'll be commenting again tomorrow morning. By: Rusty Newton (rnewton) 2015-07-16 15:10:02.343-0500 I got myself sorted out. I was able to reproduce on GIT-13-1aafadf(pulled on 2015-7-15) and here is what I found: * Able to reproduce when using chan_sip * Not able to reproduce when using chan_pjsip * Symptoms include not only hearing ringback on the calling channel but also hearing "robotic" sounding receive audio from the called channel at the same time (on top of the ringback). * On some calls it seems there is no audio except the ringback. * Tested with both ulaw and g722, symptoms remained the same despite codec change. By: Mark Michelson (mmichelson) 2015-07-20 18:20:57.246-0500 While this is definitely a bug and needs to be fixed, I have found a workaround for you so that you do not experience this for the time being. If you remove the {{Answer()}} line from extension 102, then the problem goes away. I believe the problem happens here because when Bob answers the call, the indication to stop playing tones on Alice's channel does not reach her. I'm still doing research to determine why this is happening only in chan_sip and not in chan_pjsip. | ||